# Evaluating-SageMath-Augmented-LLM-Agents-for-Computational-and-Experimental-Mathematics

./: .env.example  .gitignore  Makefile  README.md  benchmark.py  main.py  pyproject.toml
configs/: benchmark.yaml  chat.yaml  default.yaml  generate_predictions.yaml
configs/benchmark/: agent_benchmark_5.yaml  default.yaml
configs/context7/: default.yaml
configs/controller/: cas_discovery.yaml  default.yaml
configs/generate_predictions/: default.yaml
configs/logger/: console.yaml  wandb.yaml
configs/mcp/: default.yaml  research.yaml
configs/model/: anthropic.yaml  base.yaml  deepseek.yaml  google.yaml  grok.yaml  mlx.yaml  ollama.yaml  open_router.yaml  openai.yaml  qwen.yaml  qwen3_4b_thinking.yaml  yandex.yaml
configs/prompt/: frontiermath_degree19.yaml  join_chromatic_pattern.yaml  transformer.yaml
configs/provider/: mlx.yaml  ollama.yaml  openai.yaml
configs/sage/: default.yaml
configs/sage_skill/: v1.yaml  v2.yaml
configs/system_prompt/: no-tool.yaml  v1.yaml  v2.yaml  v3.yaml  v4.yaml  v5.yaml  v6.yaml  v7.yaml
data/processed/: agent_benchmark_5.json  normalized_realmath.json  realmathbenchmark_sage_not_usable.json  realmathbenchmark_sage_usable.json
logs/: tree_betti_conjecture_log.txt
notebooks/: benchmark-test.ipynb  check-problems.ipynb  minimal-run.ipynb  test.py
prompts/: frontiermath_degree19.txt  join_chromatic_pattern.txt  tree_betti_conjecture.txt  tree_betti_conjecture_blind.txt
prompts/sage_skill/: SAGEMATH_SKILL_v1.md  v1.md  v2.md
prompts/system_prompt/: SYSTEM_PROMPT_v1.md  no_tool.md  question_preprocessing.md  tool.md  v1.md  v2.md  v3.md  v4.md  v5.md  v6.md
src/: __init__.py
src/agent/: __init__.py  controller.py  controller_utils.py  schemas.py  verification.py
src/benchmark/: __init__.py  benchmark.py  compare_predictions.py  generate_predictions.py  judge_sympy_answers.py  run_realmath.py  runner.py  sympy_compare.py
src/benchmark/components/: __init__.py  config.py  io.py  metadata.py  (+5 more)
src/llmxm2/: __init__.py
src/sage/: __init__.py  runtime.py  types.py
src/tools/: __init__.py  catalog.py  context7.py  registry.py  types.py
src/utils/: config_helpers.py  console_logging.py  deepseek_chat_model.py  langchain_structured_output.py  logging.py  reasoning_content_payload.py  wandb_logging.py
tests/: test_benchmark.py  test_compare_predictions.py  test_context7.py  test_controller.py  test_docker_executor.py  test_experiment_logger.py  test_generate_predictions.py  test_policy.py  test_registry.py  test_sage_runtime.py  test_sympy_comparison.py  test_tool_catalog.py
(+14 files in other folders)
