[project]
name = "llmxm2"
version = "0.1.0"
description = "Minimal LLM + Sage research skeleton"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "mlx>=0.31.0; sys_platform == 'darwin'",
    "mlx-lm>=0.31.0; sys_platform == 'darwin'",
    "mlx-metal>=0.31.0; sys_platform == 'darwin'",
    "openai>=2.20.0",
    "rich>=14.3.3",
    "rootutils>=1.0.7",
    "wandb>=0.22.0",
    "weave>=0.51.50",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0"]
